Enviando dados do formulário para a aplicação

--- a/src/main/resources/templates/formHotel.html
+++ b/src/main/resources/templates/formHotel.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Adicionar Evento</h1>
 
-	<form action="">
+	<form action="/hoteis" method="post">
 
 		<div>
 			<label>Nome do Hotel:</label> <input type="text" name="nomeHotel">
