Atualizando layout da aplicação

--- a/src/main/resources/templates/hoteis/hotel-adicionado.html
+++ b/src/main/resources/templates/hoteis/hotel-adicionado.html
@@ -4,15 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<title>Hotéis</title>
+	<title>Hoteis</title>
 </head>
 
 <body>
 	<div th:replace="~{menu :: menu}"></div>
-
 	<div class="container">
-		<h1>Salve</h1>
-		<h2>Mano!</h2>
+		<h1>Hotel adicionado com sucesso</h1>
 	</div>
 </body>
 
