Criando a listagem de eventos

--- a/src/main/resources/templates/hoteis/formHotel.html
+++ b/src/main/resources/templates/hoteis/formHotel.html
@@ -16,7 +16,7 @@
 
 		<h1>Adicionar Evento</h1>
 
-		<form action="/eventos" method="post">
+		<form action="/hoteis" method="post">
 
 			<div>
 				<label>Nome do Hotel:</label> <input type="text" name="nomeHotel">
