--- a/src/main/resources/templates/hoteis/detalhes.html
+++ b/src/main/resources/templates/hoteis/detalhes.html
@@ -17,19 +17,66 @@
 
 		<div class="row">
 			<div class="col s12">
-				<div class="card blue-grey darken-1">
-					<div class="card-content white-text">
+				<div class="card">
+					<div class="card-content">
 						<span class="card-title">Hotel</span>
-						<p><strong>Id: </strong><span th:text="${hotel.id}"></span></p>
-						<p><strong>Nome do Hotel: </strong><span th:text="${hotel.nomeHotel}"></span></p>
-						<p><strong>Cidade do Hotel: </strong><span th:text="${hotel.cidadeHotel}"></span></p>
-						<p><strong>Gerente do Hotel: </strong><span th:text="${hotel.gerenteHotel}"></span></p>
+						<p>
+							<strong>Id: </strong><span th:text="${hotel.id}"></span>
+						</p>
+						<p>
+							<strong>Nome do Hotel: </strong><span th:text="${hotel.nomeHotel}"></span>
+						</p>
+						<p>
+							<strong>Cidade do Hotel: </strong><span th:text="${hotel.cidadeHotel}"></span>
+						</p>
+						<p>
+							<strong>Gerente do Hotel: </strong><span th:text="${hotel.gerenteHotel}"></span>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 
-	</div>
+		<div class="row">
+			<div class="col s12">
+				<div class="card">
+					<div class="card-content">
+						<span class="card-title">Adicionar Quarto:</span>
+						<form action="" method="post">
+							<div>
+								<label>Número do Quarto: </label> <input type="number" name="numeroQuarto">
+							</div>
+							<div>
+								<button type="submit" class="btn">Salvar</button>
+								<button type="reset" class="btn">Limpar</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s12">
+				<div class="card">
+					<div class="card-content">
+						<span class="card-title">Quartos</span>
+						<table class="highlight">
+							<thead>
+								<tr>
+									<th>Id</th>
+									<th>Número do Quarto</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="q : ${quartos}">
+									<td th:text="${q.id}"></td>
+									<td th:text="${q.numeroQuarto}"></td>
+								</tr>
+							</tbody>
+						</table>
+
+					</div>
 </body>
 
 </html>
