Implementando as funcionalidades de editar hoteis e quartos

--- a/src/main/resources/templates/hoteis/detalhes.html
+++ b/src/main/resources/templates/hoteis/detalhes.html
@@ -43,9 +43,11 @@
 				<div class="card">
 					<div class="card-content">
 						<span class="card-title">Adicionar Quarto:</span>
-						<form action="" method="post">
+						<form th:action="@{/hoteis/{idHotel}(idHotel=${hotel.id})}" method="post">
+							<div><input type="hidden" name="id" th:value="${quarto.id}" readonly="readonly"></div>
 							<div>
-								<label>Número do Quarto: </label> <input type="number" name="numeroQuarto">
+								<label>Número do Quarto: </label> <input type="number" name="numeroQuarto"
+									th:value="${quarto.numeroQuarto}">
 							</div>
 							<div>
 								<button type="submit" class="btn">Salvar</button>
@@ -75,8 +77,13 @@
 									<td th:text="${q.id}"></td>
 									<td th:text="${q.numeroQuarto}"></td>
 									<td><a
+											th:href="@{/hoteis/{idHotel}/quartos/{idQuartos}/selecionar(idHotel=${hotel.id}, idQuarto=${q.id})}"><i
+												class="material-icons">edit</i></a>
+										</a>
+										<a
 											th:href="@{/hoteis/{idHotel}/quartos/{idQuarto}/remover(idHotel=${hotel.id}, idQuarto=${q.id})}"><i
-												class="material-icons">delete</i></a></td>
+												class="material-icons">delete</i></a>
+									</td>
 								</tr>
 								</tr>
 							</tbody>
