Mudando o nome da classe de Quarto para Visitante

--- a/src/main/resources/templates/hoteis/formHotel.html
+++ b/src/main/resources/templates/hoteis/formHotel.html
@@ -27,7 +27,7 @@
 				<label>Cidade do Hotel:</label> <input type="text" name="cidadeHotel" th:value="${hotel.cidadeHotel}">
 			</div>
 			<div>
-				<label>Gerente do Hotel:</label> <input type="text" name="gerenteHotel" th:value="${hotel.nomeGerente}">
+				<label>Gerente do Hotel:</label> <input type="text" name="gerenteHotel" th:value="${hotel.gerenteHotel}">
 			</div>
 			<div>
 				<button class="waves-effect waves-light btn" type="submit">Salvar</button>
