--- a/src/main/resources/templates/hoteis/detalhes.html
+++ b/src/main/resources/templates/hoteis/detalhes.html
@@ -42,12 +42,16 @@
 			<div class="col s12">
 				<div class="card">
 					<div class="card-content">
-						<span class="card-title">Adicionar Quarto:</span>
+						<span class="card-title">Adicionar Visitante:</span>
 						<form th:action="@{/hoteis/{idHotel}(idHotel=${hotel.id})}" method="post">
-							<div><input type="hidden" name="id" th:value="${quarto.id}" readonly="readonly"></div>
+							<div><input type="hidden" name="id" th:value="${visitante.id}" readonly="readonly"></div>
 							<div>
-								<label>Número do Quarto: </label> <input type="number" name="numeroQuarto"
-									th:value="${quarto.numeroQuarto}">
+								<label>Nome do Hóspede: </label> <input type="text" name="nome"
+									th:value="${visitante.nome}">
+							</div>
+							<div>
+								<label>RG do Hóspede: </label> <input type="text" name="rg"
+									th:value="${visitante.rg}">
 							</div>
 							<div>
 								<button type="submit" class="btn">Salvar</button>
@@ -63,25 +67,27 @@
 			<div class="col s12">
 				<div class="card">
 					<div class="card-content">
-						<span class="card-title">Quartos</span>
+						<span class="card-title">Hóspedes</span>
 						<table class="highlight">
 							<thead>
 								<tr>
 									<th>Id</th>
-									<th>Número do Quarto</th>
+									<th>Nome do Hóspede</th>
+									<th>RG do Hóspede</th>
 									<th></th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:each="q : ${quartos}">
-									<td th:text="${q.id}"></td>
-									<td th:text="${q.numeroQuarto}"></td>
+								<tr th:each="v : ${visitantes}">
+									<td th:text="${v.id}"></td>
+									<td th:text="${v.nome}"></td>
+									<td th:text="${v.rg}"></td>
 									<td><a
-											th:href="@{/hoteis/{idHotel}/quartos/{idQuartos}/selecionar(idHotel=${hotel.id}, idQuarto=${q.id})}"><i
+											th:href="@{/hoteis/{idHotel}/visitantes/{idVisitante}/selecionar(idHotel=${hotel.id}, idVisitante=${v.id})}"><i
 												class="material-icons">edit</i></a>
 										</a>
 										<a
-											th:href="@{/hoteis/{idHotel}/quartos/{idQuarto}/remover(idHotel=${hotel.id}, idQuarto=${q.id})}"><i
+											th:href="@{/hoteis/{idHotel}/visitantes/{idVisitante}/remover(idHotel=${hotel.id}, idVisitante=${v.id})}"><i
 												class="material-icons">delete</i></a>
 									</td>
 								</tr>
