Mostrando mensagens de informação

--- a/src/main/resources/templates/hoteis/detalhes.html
+++ b/src/main/resources/templates/hoteis/detalhes.html
@@ -15,7 +15,7 @@
 
 
 		<h1>Detalhes do hotel</h1>
-
+		<p th:if="${mensagem}" th:text="${mensagem}"></p>
 		<div class="row">
 			<div class="col s12">
 				<div class="card">
