--- a/src/main/resources/templates/hoteis/formHotel.html
+++ b/src/main/resources/templates/hoteis/formHotel.html
@@ -14,7 +14,7 @@
 	<div class="container">
 
 
-		<h1>Adicionar Evento</h1>
+		<h1>Cadastrar Hotel</h1>
 
 		<form action="/hoteis" method="post" th:object="${hotel}">
 
