--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,10 +9,10 @@
 <body>
 	<nav th:fragment="menu">
 		<div class="nav-wrapper container">
-			<a href="/" class="brand-logo">Sistema de Eventos</a>
+			<a href="/" class="brand-logo">Rafael's Hotels</a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="/">Home</a></li>
-				<li><a href="/hoteis/form">Adicionar Hotel</a></li>
+				<li><a href="/">Início</a></li>
+				<li><a href="/hoteis/form">Cadastrar Hotel</a></li>
 			</ul>
 		</div>
 	</nav>
